# dioxus-components

./: 404.html  Cargo.toml  README.md  component.json  index.html
dioxus-kit/: Cargo.toml
dioxus-kit/src/: lib.rs
dioxus-kit/src/accordion/: component.json  component.rs
dioxus-kit/src/alert_dialog/: component.json  component.rs
dioxus-kit/src/aspect_ratio/: component.json  component.rs  style.css
dioxus-kit/src/avatar/: component.json  component.rs  style.css
dioxus-kit/src/badge/: component.json  component.rs  style.css
dioxus-kit/src/button/: component.json  component.rs
dioxus-kit/src/calendar/: component.json  component.rs
dioxus-kit/src/card/: component.json  component.rs
dioxus-kit/src/checkbox/: component.json  component.rs
dioxus-kit/src/collapsible/: component.json  component.rs
dioxus-kit/src/color_picker/: component.json  component.rs
dioxus-kit/src/combobox/: component.json  component.rs
dioxus-kit/src/context_menu/: component.json  component.rs
dioxus-kit/src/date_picker/: component.json  component.rs
dioxus-kit/src/dialog/: component.json  component.rs
dioxus-kit/src/drag_and_drop_list/: component.json  component.rs
dioxus-kit/src/dropdown_menu/: component.json  component.rs
dioxus-kit/src/hover_card/: component.json  component.rs
dioxus-kit/src/input/: component.json  component.rs
dioxus-kit/src/item/: component.json  component.rs
dioxus-kit/src/label/: component.json  component.rs
dioxus-kit/src/menubar/: component.json  component.rs
dioxus-kit/src/navbar/: component.json  component.rs
dioxus-kit/src/pagination/: component.json  component.rs
dioxus-kit/src/popover/: component.json  component.rs
dioxus-kit/src/progress/: component.json  component.rs
dioxus-kit/src/radio_group/: component.json  component.rs
dioxus-kit/src/scroll_area/: component.json  component.rs
dioxus-kit/src/select/: component.json  component.rs  style.css
dioxus-kit/src/separator/: component.json  component.rs
dioxus-kit/src/sheet/: component.json  component.rs
dioxus-kit/src/sidebar/: component.json  component.rs  style.css
dioxus-kit/src/skeleton/: component.json  component.rs
dioxus-kit/src/slider/: component.json  component.rs
dioxus-kit/src/switch/: component.json  component.rs  style.css
dioxus-kit/src/tabs/: component.json  component.rs
dioxus-kit/src/textarea/: component.json  component.rs
dioxus-kit/src/toast/: component.json  component.rs
dioxus-kit/src/toggle/: component.json  component.rs
dioxus-kit/src/toggle_group/: component.json  component.rs
dioxus-kit/src/toolbar/: component.json  component.rs
dioxus-kit/src/tooltip/: component.json  component.rs
dioxus-kit/src/virtual_list/: component.json  component.rs
preview/: Cargo.toml  build.rs
preview/assets/: dx-components-theme.css  hero.css  main.css
preview/snippets/: hero.rs
preview/src/: app.rs  main.rs  theme.rs
preview/src/components/: mod.rs
preview/src/components/accordion/: component.json  component.rs
preview/src/components/alert_dialog/: docs.md
preview/src/components/alert_dialog/variants/main/: mod.rs
preview/src/components/aspect_ratio/variants/main/: demo.css  mod.rs
preview/src/components/avatar/: component.rs  docs.md  style.css
preview/src/components/avatar/variants/main/: mod.rs
preview/src/components/badge/: component.json
preview/src/components/badge/variants/main/: demo.css  mod.rs
preview/src/components/button/variants/icon/: mod.rs
preview/src/components/button/variants/size/: mod.rs
preview/src/components/calendar/: component.json  component.rs  style.css
preview/src/components/calendar/variants/main/: mod.rs
preview/src/components/calendar/variants/multi_month/: mod.rs
preview/src/components/calendar/variants/range/: mod.rs
preview/src/components/calendar/variants/unavailable_dates/: mod.rs
preview/src/components/checkbox/: component.json
preview/src/components/collapsible/: component.json  component.rs
preview/src/components/color_picker/: style.css
preview/src/components/color_picker/variants/main/: mod.rs
preview/src/components/combobox/: component.json  component.rs  docs.md
preview/src/components/combobox/variants/controlled/: mod.rs
preview/src/components/combobox/variants/disabled/: mod.rs
preview/src/components/combobox/variants/dynamic/: mod.rs
preview/src/components/date_picker/: component.json  component.rs
preview/src/components/dialog/: component.rs
preview/src/components/drag_and_drop_list/: component.json  component.rs
preview/src/components/hover_card/: docs.md
preview/src/components/item/variants/group/: mod.rs
preview/src/components/navbar/: component.json
preview/src/components/otp/: component.rs  docs.md  style.css
preview/src/components/pagination/: component.json
preview/src/components/popover/: docs.md
preview/src/components/progress/: component.rs  style.css
preview/src/components/select/: component.json  component.rs  docs.md
preview/src/components/sheet/: component.json  component.rs  docs.md
preview/src/components/sidebar/: component.json  component.rs
preview/src/components/slider/: component.rs  docs.md  style.css
preview/src/components/switch/: component.rs  docs.md
preview/src/components/tabs/: docs.md  style.css
preview/src/components/tooltip/: docs.md
preview/src/dashboard/common/: icons.rs
preview/src/dashboard/views/email_client/: compose.rs  email_client.css  list_pane.rs  read_pane.rs  sidebar.rs  state.rs
primitives/: Cargo.toml
primitives/src/: avatar.rs  context_menu.rs  dialog.rs  lib.rs  otp.rs  popover.rs
primitives/src/otp/: context.rs  mod.rs
primitives/src/otp/components/: group.rs  input.rs  mod.rs  separator.rs  slot.rs
test-harness/: Cargo.toml
test-harness/src/: lib.rs
test-harness/tests/: accordion.rs  alert_dialog.rs  checkbox.rs  collapsible.rs  combobox.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  hover_card.rs  input.rs  popover.rs  progress.rs  radio_group.rs  select.rs  slider.rs  switch.rs  tabs.rs  toast.rs  toggle.rs  toggle_group.rs  toolbar.rs  tooltip.rs
(+215 files in other folders)
