[workspace]
resolver = "3"
members = ["primitives", "preview", "test-harness", "dioxus-attributes"]

[workspace.dependencies]
dioxus-primitives = { path = "primitives" }
tracing = { version = "0.1", features = ["std"] }

dioxus = "0.7.8"
dioxus-rsx = "0.7.8"

[patch.crates-io]
dioxus = { path = "../selection/packages/dioxus" }
dioxus-rsx = { path = "../selection/packages/rsx" }
dioxus-ssr = { path = "../selection/packages/ssr" }

[patch."https://github.com/ealmloff/dioxus"]
dioxus = { path = "../selection/packages/dioxus" }
dioxus-signals = { path = "../selection/packages/signals" }
lazy-js-bundle = { path = "../selection/packages/lazy-js-bundle" }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
strip = true
incremental = false

[profile.dev]
debug = 0

[profile.dev.build-override]
opt-level = 3
codegen-units = 1
