[workspace]
resolver = "3"
members = ["primitives", "preview", "test-harness", "dioxus-attributes"]

[workspace.dependencies]
dioxus-primitives = { path = "primitives" }
tracing = { version = "0.1", features = ["std"] }

dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "f717a8e184a522d078b70bb4b4d62a5f9a99ddfc" }
dioxus-rsx = { git = "https://github.com/DioxusLabs/dioxus", rev = "f717a8e184a522d078b70bb4b4d62a5f9a99ddfc" }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
strip = true
incremental = false

[profile.dev]
debug = 0

[profile.dev.build-override]
opt-level = 3
codegen-units = 1
