[package]
name = "dioxus-kit"
version = "0.0.1"
edition = "2021"
rust-version = "1.85.0"
readme = "../README.md"
keywords = ["gui", "dioxus", "components", "shadcn"]
categories = ["gui", "wasm"]
authors = ["Dioxus Labs"]
license = "MIT OR Apache-2.0"
homepage = "https://dioxuslabs.com"
repository = "https://github.com/DioxusLabs/components"
description = "A shadcn-styled component library for Dioxus, built on top of dioxus-kit-core."

[dependencies]
dioxus = { workspace = true, features = ["router"] }
dioxus-code = { version = "0.1.0", default-features = false, features = ["macro", "lang-css"] }
dioxus-icons = "0.1.0"
dioxus-kit-core.workspace = true
palette = "0.7.6"
strum = { version = "0.27.2", features = ["derive"] }
tracing.workspace = true
time = { version = "0.3.44", features = ["std", "macros"] }

[dev-dependencies]
dioxus-ssr = "0.7.0"

[features]
default = []
web = ["dioxus/web", "dioxus-kit-core/web"]
