[package]
name = "preview"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
dioxus-code = { version = "0.1.0", default-features = false, features = ["macro", "lang-css"] }
dioxus-icons = "0.1.0"
dioxus-kit-core.workspace = true
dioxus-kit.workspace = true
dioxus-i18n = { git = "https://github.com/ealmloff/dioxus-i18n", branch = "bump-dioxus" }
palette = "0.7.6"
unic-langid = { version = "0.9", features = ["macros"] }
strum = { version = "0.27.2", features = ["derive"] }
tracing.workspace = true
time = { version = "0.3.44", features = ["std", "macros"] }

[build-dependencies]
dioxus = { workspace = true }
dioxus-code = { version = "0.1.0", default-features = false, features = ["runtime", "lang-css"] }
dioxus-ssr = "0.7.0"
pulldown-cmark = "0.13.0"

[dev-dependencies]
dioxus-ssr = "0.7.0"

[features]
web = ["dioxus/web", "dioxus-kit-core/web", "dioxus-kit/web"]
desktop = ["dioxus/desktop"]
fullstack = ["dioxus/fullstack"]
server = ["dioxus/server", "dioxus/fullstack"]
native = ["dioxus/native"]
