[package]
name = "dioxus-primitives"
version = "0.0.1"
edition = "2021"
rust-version = "1.80.0"
readme = "../README.md"
keywords = ["gui", "dioxus", "components", "primitives"]
categories = ["gui", "wasm"]
authors = ["Dioxus Labs", "DogeDark"]
license = "MIT OR Apache-2.0"
homepage = "https://dioxuslabs.com"
repository = "https://github.com/DioxusLabs/components"

[dependencies]
dioxus.workspace = true
dioxus-attributes = { path = "../dioxus-attributes" }
dioxus-sdk-time = { git = "https://github.com/FastTrackStudios/sdk", branch = "main" }
time = { version = "0.3.44", features = ["std", "macros", "parsing", "local-offset"] }
num-integer = "0.1.46"
tracing.workspace = true
serde = { version = "1.0", features = ["derive"] }
palette = "0.7.6"

[build-dependencies]
lazy-js-bundle = "0.7.9"

[dev-dependencies]
dioxus-ssr = { git = "https://github.com/DioxusLabs/dioxus", rev = "f717a8e184a522d078b70bb4b4d62a5f9a99ddfc" }

[features]
default = ["router"]
router = ["dioxus/router"]
web = ["time/wasm-bindgen"]
